hyprland:keybind changes

--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -23,7 +23,7 @@ bind = $mainMod ALT, F, exec, $filemanager
 bind = $mainMod ALT, B, exec, $browser
 bind = $mainMod ALT, Y, exec, $terminal -e yazi
 bind = $mainMod ALT, N, exec, brave --incognito
-# bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord --ozone-platform=wayland
+bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord --ozone-platform=wayland
 bind = $mainMod ALT, T, exec, flatpak run io.freetubeapp.FreeTube
 bind = $mainMod ALT, O, exec, obsidian --ozone-platform=wayland
 bind = $mainMod ALT, E, exec, pkill -SIGUSR1 waybar
@@ -34,7 +34,6 @@ bind = $mainMod ALT, I, exec, swaync-client -t
 
 # webapps
 bind = $mainMod ALT, S, exec, $webapp="https://open.spotify.com"
-bind = $mainMod ALT, D, exec, $webapp="https://discord.com/channels/@me"
 bind = $mainMod ALT, U, exec, $webapp="https://youtube.com/feed/subscriptions"
 
 #bind = SUPER, V, exec, kitty --class floating -e zsh -c 'clipse $PPID'
