hyprland:turn off animations. follow mouse.

--- a/hypr/.config/hypr/hyprland/settings.conf
+++ b/hypr/.config/hypr/hyprland/settings.conf
@@ -6,7 +6,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 0
+    follow_mouse = 1
 
     touchpad {
         natural_scroll = true
@@ -71,7 +71,7 @@ decoration {
 # name "Dynamic"
 # -----------------------------------------------------
 animations {
-    enabled = true
+    enabled = false
     bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = winIn, 0.1, 1.1, 0.1, 1.1
     bezier = winOut, 0.3, -0.3, 0, 1
