various:switch to catppuccin-mocha color scheme

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,4 +1,5 @@
-theme = tokyonight_night
+# theme = tokyonight_night
+theme = catppuccin-mocha
 # background-opacity = 0.8
 # theme = catppuccin-macchiato
 # font-family = CaskaydiaCove Nerd Font
