ghostty:fix theme name format

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,5 @@
-# theme = tokyonight_night
-theme = catppuccin-mocha
+# theme = TokyoNight Night
+theme = Catppuccin Mocha
 # background-opacity = 0.8
 # theme = catppuccin-macchiato
 # font-family = CaskaydiaCove Nerd Font
