--- a/hypr/.config/hypr/hyprland/settings.conf
+++ b/hypr/.config/hypr/hyprland/settings.conf
@@ -100,7 +100,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = on
+ gesture = 3, horizontal, workspace
 }
 
 # Example per-device config
