crucible:removed and added some packages

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -19,8 +19,6 @@ SYSTEM_UTILS=(
   fd
   ffmpeg
   ffmpegthumbnailer
-  fish
-  fisher
   fladder-bin
   flatpak
   fwupd
@@ -30,6 +28,7 @@ SYSTEM_UTILS=(
   ifuse
   ipcalc
   lazygit
+  less
   locate
   mediainfo
   moreutils
@@ -61,6 +60,7 @@ SYSTEM_UTILS=(
   cups
   tailscale
   wl-clipboard
+  zsh
 )
 
 # Desktop environments
