crucible:added font noto-fonts-cjk

--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -98,6 +98,7 @@ FONTS=(
   inter-font
   noto-fonts
   noto-fonts-emoji
+  noto-fonts-cjk
   ttf-cascadia-code-nerd
   ttf-jetbrains-mono-nerd
   ttf-nerd-fonts-symbols-mono
