hyprland:config changes

--- a/hypr/.config/hypr/hyprland/windowrules.conf
+++ b/hypr/.config/hypr/hyprland/windowrules.conf
@@ -7,8 +7,7 @@
 windowrule = float, title:(1Password)
 windowrule = size 70% 70%, title:(1Password)
 windowrule = center, title:(1Password)
-windowrule = workspace 7 silent, class:^(com\.discordapp\.Discord)$
-windowrule = workspace +1, class:^(FreeTube)$
+# windowrule = workspace +1 silent, class:^(com\.discordapp\.Discord)$
 windowrule = float, class:(floating)
 # windowrule = float,title:(imv)
 # windowrule = opacity 0.9,^(kitty)$
