--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -50,7 +50,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'janoamaral/tokyo-night-tmux'
-set -g @plugin 'catppuccin/tmux#latest'
+# set -g @plugin 'catppuccin/tmux#latest'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Configure the catppuccin plugin
