--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -7,7 +7,7 @@ theme = TokyoNight Night
 font-size = 11
 mouse-hide-while-typing = true
 window-padding-balance = true
-# window-decoration = false
+window-decoration = false
 
 keybind = alt+h=goto_split:left
 keybind = alt+l=goto_split:right
