--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -6,7 +6,10 @@ theme = TokyoNight Night
 # font-family = CaskaydiaCove Nerd Font
 font-size = 11
 mouse-hide-while-typing = true
+# background-opacity = 0.1
 window-padding-balance = true
+window-padding-x = 6
+window-padding-y = 6
 window-decoration = false
 
 keybind = alt+h=goto_split:left
