--- a/yazi/.config/yazi/package.toml
+++ b/yazi/.config/yazi/package.toml
@@ -3,5 +3,10 @@ deps = []
 
 [[flavor.deps]]
 use = "BennyOe/tokyo-night"
-rev = "5f56364"
-hash = "c0bf69ad2c44005892d586e9693993c6"
+rev = "8e6296f"
+hash = "d9da921c3bd37ba32ee27a8a7a40461f"
+
+[[flavor.deps]]
+use = "kalidyasin/yazi-flavors:tokyonight-night"
+rev = "fa19b40"
+hash = "fd99189fe362330c683de88d7189b44"
