--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,6 @@
-theme = TokyoNight Night
-# theme = Catppuccin Mocha
+# theme = TokyoNight Night
+# theme = Kanagawabones
+theme = Catppuccin Mocha
 # theme = Rose Pine
 # background-opacity = 0.8
 # theme = catppuccin-macchiato
