yazi:catppuccin mocha flavor addition

--- a/yazi/.config/yazi/theme.toml
+++ b/yazi/.config/yazi/theme.toml
@@ -1,4 +1,7 @@
+# [flavor]
+# use = "tokyonight-night"
+# # For Yazi 0.4 and above
+# dark = "tokyonight-night"
 [flavor]
-use = "tokyonight-night"
-# For Yazi 0.4 and above
-dark = "tokyonight-night"
+dark = "catppuccin-mocha"
+light = "catppuccin-mocha"   
