--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -49,8 +49,8 @@ bind % split-window -h -c "#{pane_current_path}"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'janoamaral/tokyo-night-tmux'
-# set -g @plugin 'catppuccin/tmux#latest'
+# set -g @plugin 'janoamaral/tokyo-night-tmux'
+set -g @plugin 'catppuccin/tmux#latest'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Configure the catppuccin plugin
@@ -64,11 +64,11 @@ set -g @catppuccin_window_status_style "rounded"
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
-# set -g status-right "#{E:@catppuccin_status_application}"
-# set -agF status-right "#{E:@catppuccin_status_cpu}"
-# set -ag status-right "#{E:@catppuccin_status_session}"
-# set -ag status-right "#{E:@catppuccin_status_uptime}"
-# set -agF status-right "#{E:@catppuccin_status_battery}"
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
