--- a/kitty/.config/kitty/dank-tabs.conf
+++ b/kitty/.config/kitty/dank-tabs.conf
@@ -5,20 +5,19 @@ tab_bar_align           left
 tab_bar_min_tabs        2
 tab_bar_margin_width    0.0
 tab_bar_margin_height   2.5 1.5
-tab_bar_margin_color    #101418
+tab_bar_margin_color    #0e131a
 
-tab_bar_background              #101418
+tab_bar_background              #0e131a
 
-active_tab_foreground           #e0e2e8
-active_tab_background           #0d47a1
+active_tab_foreground           #16161e
+active_tab_background           #1a9fff
 active_tab_font_style           bold
 
-inactive_tab_foreground         #c2c7cf
-inactive_tab_background         #101418
+inactive_tab_foreground         #cbccd1
+inactive_tab_background         #0e131a
 inactive_tab_font_style         normal
 
 tab_activity_symbol             " ● "
-tab_numbers_style               1
 
 tab_title_template              "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title[:30]}{title[30:] and '…'} [{index}]"
 active_tab_title_template       "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title[:30]}{title[30:] and '…'} [{index}]"
