--- a/kitty/.config/kitty/dank-theme.conf
+++ b/kitty/.config/kitty/dank-theme.conf
@@ -1,25 +1,25 @@
-cursor #e0e2e8
-cursor_text_color #c2c7cf
+cursor #fefefe
+cursor_text_color #cbccd1
 
-foreground            #e0e2e8
-background            #101418
-selection_foreground  #000000
-selection_background  #8ab4f8
-url_color             #42a5f5
+foreground            #fefefe
+background            #0e131a
+selection_foreground  #16161e
+selection_background  #777a7f
+url_color             #1a9fff
 
-color0   #101418
+color0   #0e131a
 color1   #e64c49
 color2   #72d66e
-color3   #dbd07b
-color4   #4186c9
-color5   #4c87b7
-color6   #42a5f5
+color3   #dbcf7b
+color4   #3686c7
+color5   #3887c1
+color6   #1a9fff
 color7   #abb2bf
 color8   #5c6370
-color9   #e05f61
+color9   #e05f62
 color10  #89e086
 color11  #e8de97
-color12  #9ad9ff
-color13  #3a829e
-color14  #5a7aab
+color12  #a2d8ff
+color13  #33839d
+color14  #567aaa
 color15  #ffffff
