Fix my stupidness

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,6 @@
-# theme = TokyoNight Night
+theme = TokyoNight Night
 # theme = Kanagawabones
-theme = Catppuccin Mocha
+# theme = Catppuccin Mocha
 # theme = Rose Pine
 # background-opacity = 0.8
 # theme = catppuccin-macchiato
