ghostty:font change

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -4,8 +4,8 @@ theme = TokyoNight
 # theme = Rose Pine
 # background-opacity = 0.8
 # theme = catppuccin-macchiato
-# font-family = CaskaydiaCove Nerd Font
-font-size = 11
+font-family = CaskaydiaCove Nerd Font
+font-size = 12
 mouse-hide-while-typing = true
 # background-opacity = 0.1
 window-padding-balance = true
