niri:noctalia button rearrange

--- a/noctalia/.config/noctalia/settings.json
+++ b/noctalia/.config/noctalia/settings.json
@@ -237,18 +237,18 @@
         "shortcuts": {
             "left": [
                 {
+                    "id": "PowerProfile"
+                },
+                {
                     "id": "Network"
                 },
                 {
                     "id": "Bluetooth"
-                },
-                {
-                    "id": "WallpaperSelector"
                 }
             ],
             "right": [
                 {
-                    "id": "Notifications"
+                    "id": "WallpaperSelector"
                 },
                 {
                     "id": "KeepAwake"
