hyprland:change password manager

--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -28,7 +28,7 @@ bind = $mainMod ALT, O, exec, obsidian --ozone-platform=wayland
 bind = $mainMod ALT, E, exec, pkill -SIGUSR1 waybar
 bind = $mainMod ALT, W, exec, ~/.config/waybar/reload.sh
 bind = $mainMod ALT, M, exec, pprofile
-bind = $mainMod ALT, code:51, exec, 1password --ozone-platform-hint=auto
+bind = $mainMod ALT, code:51, exec, proton-pass
 bind = $mainMod ALT, I, exec, swaync-client -t
 
 # webapps
